# sha256

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
documentazione/: sha256_doc.aux  sha256_doc.fdb_latexmk  sha256_doc.fls  sha256_doc.out  sha256_doc.tex  sha256_doc.toc
documentazione/_minted-sha256_doc/: 13EF584AF7D433BB254B783F992C20AC728A8DEEDEB092E6179ADC4682754C66.pygtex  2C19DDB78009866E749F8D61FC6FBF4A728A8DEEDEB092E6179ADC4682754C66.pygtex  42D782DE4809C681D9AC9FC9A3594D07728A8DEEDEB092E6179ADC4682754C66.pygtex  5F0B52F3335B7BE61EABEEC8CBC6E5B2728A8DEEDEB092E6179ADC4682754C66.pygtex  67957F15F95F7E190F885B8682652854728A8DEEDEB092E6179ADC4682754C66.pygtex  73ED24DE7B970DD1A9A26F30C4A7DF5E728A8DEEDEB092E6179ADC4682754C66.pygtex  8D05FB9CD5C8027A9E2A4D343D2FF1CC728A8DEEDEB092E6179ADC4682754C66.pygtex
src/: client.c  common.h  server.c  worker.c
test/: file1.txt  file2.txt
